# rbl-dsl

./: CMakeLists.txt  CommonDescriptors.cc  CommonDescriptors.h  Descriptors.cc  Descriptors.h  Descriptors_inline.h  EventGrammarNew.h  MarshallEventDescriptor.cc  MarshallEventDescriptor.h  MarshallEventDescriptorBuilder.cc  MarshallEventDescriptorBuilder.h  NamespaceParsers.cc  NamespaceParsers.h  OidContainer.h  test_Descriptors.cc  test_OidContainer.cc  test_Parser.cc
include/event_model/: DescriptorKarmaGenerators.h  Descriptors.h  DescriptorsCommon.h  RowAndTable.h  Types.h  descriptor_generators.h  descriptors_common.h  generator_descriptors.h  marshall_descriptors.h  marshall_parser.h  oid_container.h  relay_descriptors.h  types.h
include/event_model/detail/: DescriptorsCommon-Serialization.h  DescriptorsCommon-inl.h  Descriptors_inline.h  OidContainer-Serialization.h  OidContainer-inl.h  OidContainer.h
include/event_model/home/descriptors/: descriptors_common-inl.h  descriptors_common-serialization.h  descriptors_common.h  generator_descriptors-serialization.h  generator_descriptors.h  marshall_descriptor_builders.h  marshall_descriptors.h  relay_descriptors-serialization.h  relay_descriptors.h
include/event_model/home/generator/: descriptor_generators.h  descriptor_karma_generators.h
include/event_model/home/oid_container/: oid_container-inl.h  oid_container-serialization.h  oid_container.h
include/event_model/home/parser/: event_model_grammar.h  marshall_namespace_parser.h
include/event_model/home/types/: 0_undefined.h  1_int4.h  2_int8.h  3_string.h  4_event.h  meta_primitives.h  types.h
include/event_model/types/: 0_rbl_undefined.h  1_rbl_int4.h  2_rbl_int8.h  meta_primitives.h  rbl_types.h
include/event_model/types2/: 1_rbl_int4.h  2_rbl_int8.h  3_rbl_string.h  meta_primitives.h  rbl_types.h
include/event_model_old/detail/: Descriptors_inline.h
include/event_processing/: EventSet.h  event_gen_site-inl.h  event_gen_site.h
include/event_processing/detail/: event_string_generator.h  event_string_parser.h
include/generator/: Descriptors-Serialization.h  Descriptors.h
include/interface/: RelayToServerInterface.h
include/marshall/: DescriptorBuilders.h  Descriptors.h  ServerToRelay.h
include/marshall/parser/: NamespaceParsers.h
include/marshall/parser/detail/: EventModelGrammar.h
include/parser/: Descriptors.h  NamespaceParsers.h
include/parser/detail/: EventModelGrammar.h  row_generator.h  row_parser.h
include/relay/: Descriptors-Serialization.h  Descriptors.h
include/server/: ServerToRelay.h
ll_tests/: CMakeLists.txt  test_OidContainer.cc
ll_tests/parser/: CMakeLists.txt  test_Descriptors.cc  test_FileParsing.cc  test_Grammar.cc  test_OidContainer.cc  test_Parser.cc
ll_tests/relay/: CMakeLists.txt
misc/: gcc_env_vars.sh
misc/doxy/: Doxyfile
src/: CMakeLists.txt  Descriptors.cc  NamespaceParsers.h
src/event_model/: CMakeLists.txt  DescriptorKarmaGenerators.cc  NamespaceParsers.cc  descriptor_karma_generators.cc  types.cc
src/event_model_old/: CMakeLists.txt
src/event_processing/: CMakeLists.txt  EventSet.cc  event_gen_site.cc  event_string_generator.cc  event_string_parser.cc
src/marshall/: CMakeLists.txt  ServerToRelay.cc
src/parser/: CMakeLists.txt  DescriptorBuilders.cc  Descriptors.cc  NamespaceParsers.cc  RowAndTable.cc  row_parser.cc
src/server/: RelayToServer.cc  ServerToRelay.cc  test_server.cc
tests/: CMakeLists.txt
tests/event_model/: CMakeLists.txt  em_tests.cc  test_Descriptors.cc  test_FileParsing.cc  test_Generator.cc  test_Grammar.cc  test_OidContainer.cc  test_variant_event.cc
tests/event_model/test_data/: namespace_spacein_id  namespace_variant_event
tests/event_processing/: CMakeLists.txt  ep_tests.cc  test_EventGenSite.cc
tests/parser/: CMakeLists.txt  parser_tests.cc  readme.txt  test_Descriptors.cc  test_FileParsing.cc  test_Grammar.cc  test_OidContainer.cc  test_RowAndTable.cc  test_includes.h
tests/parser/test_data/: namespace_correct  namespace_failbrace
tests/relay/: test_RelayNamespaceSerialization.cc
tests/test_processes/: CMakeLists.txt  test_client.cc  test_server.cc
